fixes #13 - trnaslations and alignment on homepage

--- a/ckan/ckanext-odata_org_il/ckanext/odata_org_il/fanstatic/rtl.css
+++ b/ckan/ckanext-odata_org_il/ckanext/odata_org_il/fanstatic/rtl.css
@@ -29,3 +29,7 @@
 .resource-item {
     padding: 10px 60px 10px 10px;
 }
+
+.homepage .module-search .tags h3, .homepage .module-search .tags .tag {
+    float: right;
+}
